test/cases/parser/RecordUpdate2.errors
src/RecordUpdate2.b:6:21: Syntax error (a field name is required)
