test/cases/parser/RecordUpdate2.b
module RecordUpdate2
interface {}

function test()
{
    var x = {a with 1, 2, 3};
}
